loopfor.LoopFor.scala.error
Compilation error:
LoopFor:10: error: not found: value putdownBaggle
putdownBaggle() 
^